Fix z-index on icon bar

--- a/assets/styles/_social.scss
+++ b/assets/styles/_social.scss
@@ -5,6 +5,7 @@
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
+  z-index: 16000;
 }
 
 .icon-bar a {
@@ -14,4 +15,5 @@
   transition: all 0.3s ease;
   color: white;
   font-size: 20px;
+  z-index: 16000;
 }
